Minor optimization and sync cloud data with UI in the background